Wed Mar 04 00:29:44 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.20.

Wed Mar 04 00:03:35 GMT 2015  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Avoid doing link tests with libmagic in configure as
	  they fail on mingw due to not automatically picking up libraries
	  which libmagic itself depends on.

Sat Feb 14 10:46:47 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jan 27 04:37:12 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Interpret a command of "false" in
	  "--filter" as meaning to ignore files with that MIME type.

Sat Jan 24 12:14:33 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu Jan 22 01:44:01 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Ignore extensions .msi and .msp, which are Microsoft
	  installer files, but which libmagic sometimes incorrectly identifies
	  as application/msword.

Fri Dec 19 03:21:13 GMT 2014  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst: Improve wording of docs for SORT parameter.

Tue Jan 06 21:15:14 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Use pkg-config in preference to determine flags needed
	  to compile and link with PCRE, as this will just work when
	  cross-compiling (at least under MXE).

Sun Dec 21 21:54:48 GMT 2014  Olly Betts <olly@survex.com>

	* query.cc: Handle [=0 as [=1.

Tue Dec 16 03:53:25 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Define MINGW_HAS_SECURE_API under mingw to get
	  _putenv_s() declared in stdlib.h.

Wed Dec 03 04:17:18 GMT 2014  Olly Betts <olly@survex.com>

	* templates/xml: Update handling of DATE1, DATE2 and DAYSMINUS which
	  were renamed in 0.6.x and the compatibility aliases removed in
	  1.0.0. 

Wed Dec 03 04:15:51 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Update documentation references to DATE1,
	  DATE2, and DAYSMINUS which were renamed in 0.6.x and the
	  compatibility aliases removed in 1.0.0. 