@@ -1,3 +1,12 @@
+Tue May 05 12:08:39 GMT 2015  Olly Betts <olly@survex.com>
+
+	* urldecode.h,urlenctest.cc: Improve decoding done by $prettyurl - we
+	  now leave the query and fragment parts of the URL alone and don't
+	  decode an escaped "/" (omindex doesn't create URLs with any of
+	  these, so we only risk breaking other URLs which have them), and we
+	  decode some additional ASCII characters in the path part:
+	  []@!$&'()*+.;=  (addresses #550 in part)
+
 Wed Mar 04 00:29:44 GMT 2015  Olly Betts <olly@survex.com>
 
 	* NEWS,configure.ac: Update for 1.2.20.
